adding citizenship level lookup service
