# facilityAPI/controllers/DefaultService.js
@@ -1,22 +1,6 @@
 'use strict';
 var Request = require('tedious').Request;
 var TYPES = require('tedious').TYPES;
-
-//var Connection = require('tedious').Connection;
-//var config = {
-//    userName: 'yourusername',
-//    password: 'yourpassword',
-//    server: 'yourserver.database.windows.net',
-//    // If you are on Microsoft Azure, you need this:
-//    options: {encrypt: true, database: 'AdventureWorks'}
-//};
-//var connection = new Connection(config);
-//connection.on('connect', function(err) {
-//// If no error, then good to proceed.
-//    console.log("Connected");
-//});
-
-
 var Connection = require('tedious').Connection;
 var config = {
     userName: 'dbadmin',
@@ -25,7 +9,8 @@ var config = {
     // When you connect to Azure SQL Database, you need these next options.
     options: {encrypt: true, database: 'Clinic'}
 };
-var connection = new Connection(config);
+var connection;
+connection = new Connection(config);
 connection.on('connect', function (err) {
     if (err) {
         console.log("the error: " + err);
@@ -36,6 +21,7 @@ connection.on('connect', function (err) {
     // If no error, then good to proceed.
     console.log("Connected");
 });
+
 
 exports.getAllFacilities = function (settlement, cb) {
 
@@ -75,6 +61,113 @@ exports.getAllFacilities = function (settlement, cb) {
 
 }
 
+
+exports.getAllCitizenships = function (cb) {
+
+    var result = [];
+    var request = new Request("SELECT bnfcry_id, bnfcry from vw_lkup_bnfcry" +
+        " order by user_intrfc_sort_ord", function (err) {
+        if (err) {
+            console.log("the error: " + err);
+        }
+        else {
+            console.log("fetched citizenship " + JSON.stringify(result))
+            cb(result);
+        }
+    });
+
+    request.on('row', function (columns) {
+        console.log("found diagnosis " + columns[1].value)
+        var entry = {};
+        entry.id = columns[0].value;
+        entry.level = columns[1].value;
+        result.push(entry);
+        console.log(JSON.stringify(entry));
+    });
+
+    connection.reset(function (err) {
+        if (err) {
+            console.log("reset error: " + err);
+            return "fail"
+        }
+        else {
+            connection.execSql(request);
+        }
+    });
+
+}
+
+exports.getAllDiagnosis = function (cb) {
+
+    var result = [];
+    var request = new Request("SELECT diag_id, diag_descn from vw_lkup_diag" +
+        " order by user_intrfc_sort_ord", function (err) {
+        if (err) {
+            console.log("the error: " + err);
+        }
+        else {
+            console.log("fetched diagnosis " + JSON.stringify(result))
+            cb(result);
+        }
+    });
+
+    request.on('row', function (columns) {
+        console.log("found diagnosis " + columns[1].value)
+        var entry = {};
+        entry.id = columns[0].value;
+        entry.name = columns[1].value;
+        result.push(entry);
+        console.log(JSON.stringify(entry));
+    });
+
+    connection.reset(function (err) {
+        if (err) {
+            console.log("reset error: " + err);
+            return "fail"
+        }
+        else {
+            connection.execSql(request);
+        }
+    });
+
+}
+
+
+exports.getAllSupplementals = function (diagnosis, cb) {
+
+    var result = [];
+    var request = new Request("SELECT splmtl_diag_id, splmtl_diag_descn, diag_id from vw_lkup_all_splmtl_diag" +
+        " order by user_intrfc_sort_ord", function (err) {
+        if (err) {
+            console.log("the error: " + err);
+        }
+        else {
+            console.log("fetched supplementals " + JSON.stringify(result))
+            cb(result);
+        }
+    });
+
+    request.on('row', function (columns) {
+        console.log("found supplemental " + columns[1].value)
+        var entry = {};
+        entry.id = columns[0].value;
+        entry.name = columns[1].value;
+        entry.diagnosis = columns[2].value;
+        result.push(entry);
+        console.log(JSON.stringify(entry));
+    });
+
+    connection.reset(function (err) {
+        if (err) {
+            console.log("reset error: " + err);
+            return "fail"
+        }
+        else {
+            connection.execSql(request);
+        }
+    });
+
+}
 
 exports.getFacilityById = function (facilityId) {
 
