# facilityAPI/swagger.json
@@ -202,6 +202,100 @@
           }
         }
       }
+    },
+    "/citizenship": {
+      "get": {
+        "summary": "Citizenship Lookup List",
+        "description": "The Citizenship endpoint returns the list of all Citizenships that are currently registered with the API.",
+        "x-swagger-router-controller": "Default",
+        "tags": [
+          "Default"
+        ],
+        "operationId": "getAllCitizenships",
+        "responses": {
+          "200": {
+            "description": "citizenship response",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/citizenship"
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "schema": {
+              "$ref": "#/definitions/errorModel"
+            }
+          }
+        }
+      }
+    },
+    "/diagnosis": {
+      "get": {
+        "summary": "Diagnosis Lookup List",
+        "description": "The Diagnosis endpoint returns the list of all Diagnosis that are currently registered with the API.",
+        "x-swagger-router-controller": "Default",
+        "tags": [
+          "Default"
+        ],
+        "operationId": "getAllDiagnosis",
+        "responses": {
+          "200": {
+            "description": "diagnosis response",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/diagnosis"
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "schema": {
+              "$ref": "#/definitions/errorModel"
+            }
+          }
+        }
+      }
+    },
+    "/supplementals": {
+      "get": {
+        "summary": "",
+        "description": "The Supplementals endpoint returns the list of all diagnosis Supplementals that are currently registered with the API.",
+        "x-swagger-router-controller": "Default",
+        "tags": [
+          "Default"
+        ],
+        "operationId": "getAllSupplementals",
+        "parameters": [
+          {
+            "name": "diagnosis",
+            "in": "query",
+            "description": "ID of a diagnosis.  Will filter supplementals by that diagnosis.",
+            "required": false,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "diagnosis response",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/diagnosis"
+              }
+            }
+          },
+          "default": {
+            "description": "unexpected error",
+            "schema": {
+              "$ref": "#/definitions/errorModel"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -227,6 +321,59 @@
         },
         "region": {
           "type": "string"
+        }
+      }
+    },
+    "citizenship": {
+      "type": "object",
+      "required": [
+        "id",
+        "level"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "level": {
+          "type": "string"
+        }
+      }
+    },
+    "diagnosis": {
+      "type": "object",
+      "required": [
+        "id",
+        "name"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        }
+      }
+    },
+    "supplemental": {
+      "type": "object",
+      "required": [
+        "id",
+        "name",
+        "diagnosis"
+      ],
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "diagnosis": {
+          "type": "integer",
+          "format": "int64"
         }
       }
     },
