# lookupAPI/controllers/Lookup.js
@@ -3,7 +3,7 @@
 var url = require('url');
 
 
-var Default = require('./DefaultService');
+var Default = require('./LookupService');
 
 
 module.exports.getAllFacilities = function getAllFacilities (req, res, next) {
@@ -22,6 +22,38 @@ module.exports.getAllFacilities = function getAllFacilities (req, res, next) {
     console.log("no facilities found");
     res.end();
 };
+
+module.exports.getAllDiagnosis = function getAllDiagnosis (req, res, next) {
+    var result = Default.getAllDiagnosis();
+
+    if(typeof result !== 'undefined') {
+        console.log(JSON.stringify(result))
+
+        res.setHeader('Content-Type', 'application/json');
+        res.end(JSON.stringify(result || {}, null, 2));
+    }
+    else
+        console.log("no diagnosis found");
+    res.end();
+};
+
+module.exports.getAllSupplementals = function getAllSupplementals (req, res, next) {
+    var settlement = req.swagger.params['diagnosis'].value;
+
+
+    var result = Default.getAllSupplementals(diagnosis);
+
+    if(typeof result !== 'undefined') {
+        console.log(JSON.stringify(result))
+
+        res.setHeader('Content-Type', 'application/json');
+        res.end(JSON.stringify(result || {}, null, 2));
+    }
+    else
+        console.log("no supplementals found");
+    res.end();
+};
+
 
 module.exports.getFacilityById = function getFacilityById (req, res, next) {
   var facilityId = req.swagger.params['facilityId'].value;
